--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
 <html iang="pt-br">
+  <head>
+<meta charset="UTF-8">
+    <title>Salão chique alura</title>
+<link rel="stylesheet" href="style.css">
+  </head>
+</html>
+<body>
+  <img scr="gato.jpg"
+</body>
