--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html iang="pt-br">
   <head>
 <meta charset="UTF-8">
-    <title>Salão chique alura</title>
+    <title>Salão chique Alura</title>
 <link rel="stylesheet" href="style.css">
   </head>
 <body>
-  <img scr="gato.jpg"
+  <img scr="gato.jpg">
 </body>
   </html>
