--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Salão chique Alura</title>
 <link rel="stylesheet" href="style.css">
   </head>
+</html>
 <body>
   <img scr="gato.jpg">
 </body>
