--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <section class="conteudo-principal"></section>
+    <section class="conteudo-principal">
     <h2 class="titulo-principal">Meus objetivos do ano_</h2>
     <div class="botoes"> 
       <button class="botao">Cursos na Alura</button>
@@ -16,6 +16,7 @@
       <button class="botao">Criar um portfólio</button>
       <button class="botao">Atualizar meu currículo</button>
     </div>
+  </section>
   </body>
 </html>
 
