--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
         <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
         <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
       </div>
-    </div>
+    <div class="aba"
   </section>
     <script scr="main.js"></script>
 
   </body>
 </html>
-
-<h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
 
 }
   
