--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section class="conteudo-principal">
     <h2 class="titulo-principal">Meus objetivos do ano_</h2>
-    <div class="conteudo"
+    <div class="conteudo"></div>
     <div class="botoes"> 
       <button class="botao">Cursos na Alura</button>
       <button class="botao">Criar projetos em JavaScript</button>
