--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang=!pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meus objetivos do ano</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <section class="conteudo-principal">
     <h2 class="titulo-principal">Meus Objetivos do ano<span>_<span></h2>
@@ -22,18 +20,22 @@
         <div class="aba-conteudo ativo">
           <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos do Alurta</h3>
           <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+          <div class="contador"></div>
         </div>
         <div class="aba-conteudo">
           <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
           <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+          <div class="contador"></div>
         </div>
         <div class="aba-conteudo">
           <h3 class="aba-conteudo-titulo-principal">Cria um portifólio com meus 3 melhores projetos</h3>
           <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+          <div class="contador"></div>
         </div>
         <div class="aba-conteudo">
           <h3 class="aba-conteudo-titulo-principal">Atualizar meu corrículo</h3>
           <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+          <div class="contador"></div>
         </div>
       </div>
     </div>
